# caolo-backend

./: .dockerignore  .gitignore  Makefile  README.md  Tiltfile  api.Dockerfile  docker-compose.yaml  example.env  release.Dockerfile  release.sh  rt.Dockerfile  sim.Dockerfile  skaffold.yaml
.circleci/: config.yml
.github/workflows/: queen.yml  rt.yml  worker.yml
api/: Makefile  README.md  pyproject.toml  setup.py
api/caoloapi/: app.py  config.py  queen.py
api/caoloapi/api_v1/: __init__.py  users.py  world.py
api/caoloapi/handler/: commands.py  scripting.py  users.py  world.py
api/caoloapi/model/: auth.py
api/test/: test_script.py  test_user.py  test_world.py
db/migrations/: 000001_init.up.sql  20210824200024_add_test_user.down.sql  20210824200024_add_test_user.up.sql
k8s/: db.yml  queen.yml  rt.yml  web.yml
protos/: cao_commands.proto  cao_common.proto  cao_intents.proto  cao_script.proto  cao_users.proto  cao_world.proto
rt/: Makefile  README.md  client.go  go.mod  go.sum  hub.go  main.go
sim/: Cargo.toml  Makefile  README.md
sim/.cargo/: config
sim/alloc/: Cargo.toml
sim/alloc/src/: arena.rs  lib.rs  linear.rs  scope_stack.rs
sim/cao-storage-derive/: Cargo.toml
sim/cao-storage-derive/src/: lib.rs
sim/entity/: Cargo.toml
sim/entity/src/: lib.rs  world.rs
sim/entity/src/collections/: handle_table.rs  mod.rs
sim/simulation/: Cargo.toml
sim/simulation/benches/: btree_table.rs  morton_table.rs  pathfinding_benches.rs  simulation_benchmarks.rs  table_join.rs  vec_table.rs
sim/simulation/src/: entity_archetypes.rs  executor.rs  indices.rs  init.rs  intents.rs  lib.rs  map_generation.rs  pathfinding.rs  scripting_api.rs  utils.rs  world.rs
sim/simulation/src/components/: bot_components.rs  game_config.rs  rooms.rs
sim/simulation/src/geometry/: axial.rs  hexagon.rs
sim/simulation/src/indices/: entity_id.rs
sim/simulation/src/intents/: attack_intent.rs  dropoff_intent.rs  mine_intent.rs  move_intent.rs
sim/simulation/src/map_generation/: overworld.rs  room.rs
sim/simulation/src/pathfinding/: tests.rs
sim/simulation/src/scripting_api/: bots.rs  find_api.rs  tests.rs
sim/simulation/src/storage/: macros.rs  views.rs
sim/simulation/src/storage/views/: unwrap.rs
sim/simulation/src/systems/: attack_system.rs  death_system.rs  dropoff_intent_system.rs  log_intent_system.rs  mine_intent_system.rs  mineral_system.rs  move_intent_system.rs  path_cache_intent_system.rs  say_intent_system.rs  script_execution.rs  script_history_system.rs  spawn_system.rs
sim/simulation/src/systems/spawn_system/: spawn_intent_system.rs
sim/simulation/src/tables/: btree_table.rs  flag_table.rs  handle_table.rs  hex_grid.rs  mod.rs  morton_hierarchy.rs  morton_table.rs  page_table.rs  traits.rs  unique_table.rs
sim/simulation/src/tables/dense_table/: serde_impl.rs
sim/simulation/src/tables/hex_grid/: serde_impl.rs
sim/simulation/src/tables/morton_table/: find_key_partition.rs  serde_impl.rs  sorting.rs  tests.rs
sim/simulation/src/world/: world_serde.rs
sim/storage/src/: lib.rs  linear.rs  scope.rs  scope_stack.rs
sim/worker/: Cargo.toml
sim/worker/src/: command_service.rs  config.rs  game_loop.rs  health_service.rs  main.rs  protos.rs  scripting_service.rs  users_service.rs  world_service.rs
sim/worker/src/input/: rooms.rs  script_update.rs  structures.rs  users.rs
sim/worker/src/world_service/: ser_bots.rs  ser_resources.rs  ser_structures.rs  world_events.rs
