[tool.poetry]
name = "caoloapi"
version = "0.1.0"
description = ""
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
license = "MIT"
include=["./caoloapi/protos/*"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65"
asyncpg = "^0.22.0"
uvicorn = { extras = ["standard"], version = "^0.13.4" }
pydantic = { extras = ["email"], version = "^1.8.1" }
grpcio-tools = "^1.37.0"
python-multipart = "^0.0.5"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = "^3.2.0"
cao-lang = "^0.1.20"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0", 'setuptools>=40', 'grpcio-tools']
build-backend = "poetry.core.masonry.api"
