[package]
name = "caolo-sim"
version = "0.1.1"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
cao-lang = { version = "0.1" }
cao_storage_derive = { path = "../cao-storage-derive" }
cao-profile = { git = "https://github.com/caolo-game/cao-profile.git", optional = true, features = [
    "http"
] }
rand = { version = "0.8", features = ["small_rng"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
arrayvec = { version = "0.7", features = ["serde"] }
rayon = "*"
serde = "1"
serde_derive = "1"
thiserror = "1"
anyhow = "1"
serde_yaml = "0.8"
tracing = { version = "0.1", features = ["release_max_level_info"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
serde_json = "1"
serde_test = "*"
test-env-log = "0.2"
env_logger = "*"
futures-lite = "*"

[build-dependencies]
toml = "0.5"
serde = { version = "1", features = ["derive"] }
semver = "1"

[[bench]]
name = "simulation_benchmarks"
harness = false
