[package]
name = "caolo-sim"
version = "0.1.1"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
cao-lang = "0.1.39"
cao_storage_derive = { path = "../cao-storage-derive" }
cao_alloc = { path = "../alloc" }
rand = { version = "0.8.4", features = ["small_rng"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
arrayvec = { version = "0.7.1", features = ["serde"] }
rayon = "1.5.1"
serde = "1.0.130"
serde_derive = "1.0.130"
thiserror = "1.0.30"
anyhow = "1.0.44"
serde_yaml = "0.8.21"
tracing = { version = "0.1.29", features = ["release_max_level_info"] }
smallvec = "1.7.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
serde_json = "1.0.68"
serde_test = "1.0.130"
test-env-log = "0.2.7"
env_logger = "0.9.0"
futures-lite = "1.12.0"

[build-dependencies]
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
semver = "1.0.4"

[[bench]]
name = "simulation_benchmarks"
harness = false
