[package]
name = "caolo-worker"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "caolo-worker"
path = "src/main.rs"
required-features = []

[features]
default = ["dotenv"]

[dependencies]
caolo-sim = { path = "../simulation" } # , features=["cao-profile"] }
cao-lang = { version = "0.1" }
serde_json = "1"
serde = "1"
serde_derive = "1"
bincode = "1"
futures = "0.3"
anyhow = "1"
thiserror = "1"
dotenv = { version = "0.15", optional = true }
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1", features = [
    "sync",
    "macros",
    "rt",
    "rt-multi-thread"
], default-features = false }
tokio-stream = "*"
tonic = { version = "0.5" }
prost = "0.8"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.2", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "*"
opentelemetry = { version = "*", features = ["rt-tokio"] }

[dev-dependencies]
futures-lite = "*"

[build-dependencies]
tonic-build = { version = "0.5", default-features = false, features = [
    "transport",
    "prost"
] }
