[package]
name = "caolo-worker"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "caolo-worker"
path = "src/main.rs"
required-features = []

[features]
default = ["dotenv"]

[dependencies]
caolo-sim = { path = "../simulation" } # , features=["cao-profile"] }
cao-lang = "0.1.39"
serde_json = "1.0.68"
serde = "1.0.130"
serde_derive = "1.0.130"
bincode = "1.3.3"
futures = "0.3.17"
anyhow = "1.0.44"
thiserror = "1.0.30"
dotenv = { version = "0.15.0", optional = true }
uuid = { version = "0.8.2", features = ["v4"] }
tokio = { version = "1.12.0", features = [
    "sync",
    "macros",
    "rt",
    "rt-multi-thread"
], default-features = false }
tokio-stream = "0.1.7"
tonic = "0.5.2"
prost = "0.8"
tracing = { version = "0.1.29", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.16.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }

[dev-dependencies]
futures-lite = "1.12.0"

[build-dependencies]
tonic-build = { version = "0.5.2", default-features = false, features = [
    "transport",
    "prost"
] }
